<resources>
    <string name="app_name">DynamicNotch</string>
    <string name="intro1">Experience the astonishing look of iPhone 14\nPro\'s dynamic island notch on your Android\nwith stunning animations.</string>
    <string name="intro2">Easy access to your favorite apps with one tap\nusing our app\'s shortcut hub.\n</string>
    <string name="intro3">Upgrade your phone\'s look and functionality\nand get ready for a seamless and stylish\nexperience!</string>
    <string name="permission">The following permission are required to run the application</string>
    <string name="permision1">Notification Island Drawing Permission</string>
    <string name="permision2">Enable Notification</string>
    <string name="next">Next</string>

    <string name="test_text">New email Good long text is good to go here is the thing to test with it</string>
    <string name="reply">Reply</string>
    <string name="rotation_off">Rotation Off</string>
    <string name="rotation_on">Rotation On</string>
    <string name="screen_cast">Screen Cast</string>
    <string name="screen_lock">Screen Lock</string>
    <string name="screen_record">Recorder</string>
    <string name="screen_shot">Screen Shot</string>
    <string name="screen_time">Screen time</string>
    <string name="screen_time_no_permission">No permission</string>
    <string name="screenrecord_name">Screen Recording</string>
    <string name="brightness_auto">Auto</string>
    <string name="brightness_manual">Manual</string>
    <string name="brightness_mode">Brightness</string>
    <string name="data_saver">Data Saver</string>
    <string name="quick_settings_bluetooth_detail_empty_text">No paired devices available</string>
    <string name="quick_settings_bluetooth_label">Bluetooth</string>
    <string name="quick_settings_cast_title">Screen Cast</string>
    <string name="quick_settings_cellular_detail_title">Mobile data</string>
    <string name="quick_settings_connected">Connected</string>
    <string name="quick_settings_connected_battery_level">Connected, battery %1$s</string>
    <string name="quick_settings_connecting">Connecting…</string>
    <string name="quick_settings_dnd_alarms_label">Alarms only</string>
    <string name="quick_settings_dnd_label">Do Not Disturb</string>
    <string name="quick_settings_dnd_none_label">Total silence</string>
    <string name="quick_settings_dnd_priority_label">Priority only</string>
    <string name="quick_settings_done">Done</string>
    <string name="quick_settings_flashlight_label">Flashlight</string>
    <string name="quick_settings_hotspot_label">Hotspot</string>
    <string name="quick_settings_location_label">Location</string>
    <string name="quick_settings_more_settings">More settings</string>
    <string name="quick_settings_nfc_label">NFC</string>
    <string name="quick_settings_night_display_label">Night Light</string>
    <string name="quick_settings_rotation_unlocked_label">Auto-rotate</string>
    <string name="quick_settings_tiles_default">wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,location,brightness,hotspot,saver,cast,dark,night,ringer,nfc,stock,sim</string>
    <string name="quick_settings_tiles_more">,ss,rec,sync,screen,timeout,lock,clock,camera,keyboard</string>
    <string name="quick_settings_ui_mode_night_label">Dark mode,Dark theme</string>
    <string name="quick_settings_wifi_detail_empty_text">No Wi-Fi networks available</string>
    <string name="quick_settings_wifi_label">Wi-Fi</string>
    <string name="quick_settings_wifi_secondary_label_transient">Turning on…</string>
    <string name="quick_settings_wifi_secondary_label_transient_off">Turning off…</string>
    <string name="switch_sim">Switch data SIM</string>
    <string name="text_off">Off</string>
    <string name="text_on">On</string>
    <string name="screenshot">Screenshot</string>
    <string name="charging_txt">Charging</string>
    <string name="full_txt">Full</string>
    <string name="silent_txt">Silent</string>
    <string name="vibrate">Vibrate</string>
    <string name="bluetooth_permission">Bluetooth Permission not granted!</string>
    <string name="airpods">Airpods</string>
    <string name="clock">Clock</string>
    <string name="open_system_shade">Open system shade</string>
    <string name="keyboard_picker">Keyboard Picker</string>
    <string name="camera">Camera</string>
    <string name="percent">%%</string>
    <string name="accessibility_desc">This service allows the use of overlay window on top of the screen for notifications. \n\nNo data is stored on the device or sent over the internet.</string>
    <string name="blutooth_permission_txt">This app requires this permission to control bluetooth</string>
    <string name="privacyTxt">"\t\t\t\tPosting rules you should be taking care of before you start interaction on our website application: Assuring you carry the rights and eligibility to post any form of content you are about to share.\n\t\t\t\tWe never permit nudism on application website.  We won't allow posting of sexually explicit content, sexually explicit text, images, or audio content depicting extreme sexual acts such as acts of posting Content that drives traffic to pornographic online services. Please note that we may make exceptions based on artistic, educational, historical, documentary, or scientific nature, or where there are other considerable benefits to the public at large.\n\t\t\t\tWe don't permit encouragement or applaud towards terrorism, formed crime scenes or hate association groups on our application website. Attempting to sell sexual services or weapons and harmful drugs are also not permitted. We will remove reasonable threats of severity, hate arousing content speech and the intentionally pointing of private individuals. We do not permit attacks abuse based on skin colour ,  native, sex, gender, gender identity, sexual orientation, religion, disability or disease. Graphic violence is not allowed and we may remove videos or images of intense, graphic violence to make sure our application website stays appropriate for everyone. If anyone or any account is spotted doing the above restricted activities they can be booked and arrested for the same. If viewers spot any violations of the above rules they have the right to report the content to us by using the report feature given in  our application website."</string>
    <string name="start">Start</string>
    <string name="privacy1">By clicking you are agreeing to</string>
    <string name="privacy2"><![CDATA[Privacy policy]]></string>
    <string name="privacy3">and</string>
    <string name="privacy4"><![CDATA[Term & Condition]]></string>
    <string name="statusbar">Status Bar Island Notification</string>
    <string name="enable">Enable Dynamic Island Notification</string>
    <string name="enablesmartmenu">Enable Smart Menu</string>
    <string name="cemraPos">Camera Position</string>
    <string name="margin">Margin</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="cemraCount">Camera Count</string>
    <string name="height">Notch Size</string>
    <string name="minus">Minus</string>
    <string name="plus">Plus</string>
    <string name="enableglow">Enable Glow</string>
    <string name="gradintClr">Glow Gradient Color</string>
    <string name="startClr">Start</string>
    <string name="endClr">End</string>
    <string name="home">Home</string>
    <string name="more">Widgets</string>
    <string name="setting">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="module">Modules</string>

</resources>