<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_gradiant">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/relbtn"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mTxtTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginRight="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:gravity="center"
                android:text="TERMS OF USE"
                android:textAppearance="@style/TextAppearance.MyApp.Headline5"
                android:textColor="@color/colorPrimary" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:layout_marginRight="@dimen/_10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_5dp"
                        android:text="@string/privacyTxt"
                        android:textAppearance="@style/TextAppearance.MyApp.Caption"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6dp"
                        android:orientation="horizontal">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/mMCBPrivacy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:buttonTint="@color/white"
                            android:drawablePadding="@dimen/_10dp"
                            android:textColor="@color/white" />

                        <LinearLayout
                            android:id="@+id/mLLCheck"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="-4dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/_5dp"
                                    android:text="@string/privacy1"
                                    android:textAppearance="@style/TextAppearance.MyApp.Caption"
                                    android:textColor="@color/white" />

                                <TextView
                                    android:id="@+id/mTxtPrivacy2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/_5dp"
                                    android:text="@string/privacy2"
                                    android:textAppearance="@style/TextAppearance.MyApp.Caption"
                                    android:textColor="@color/white" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="-7dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/_5dp"
                                    android:text="@string/privacy3"
                                    android:textAppearance="@style/TextAppearance.MyApp.Caption"
                                    android:textColor="@color/white" />

                                <TextView
                                    android:id="@+id/mTxtTermsCondition"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/_5dp"
                                    android:text="@string/privacy4"
                                    android:textAppearance="@style/TextAppearance.MyApp.Caption"
                                    android:textColor="@color/white" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/relbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/_5dp"
            android:layout_marginRight="@dimen/_5dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mTxtNext"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_gradiant_btn"
                android:gravity="center"
                android:paddingStart="@dimen/_100dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:paddingEnd="@dimen/_100dp"
                android:text="@string/start"
                android:textAppearance="@style/TextAppearance.MyApp.Body1"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>